[v8.x] Add redirect from neutrino.js.org to neutrinojs.org
Both old and new domains were already being served from the same
production Netlify site, but now users visiting it via the old domain
will be served HTTP 302 redirects to the new.

See:
https://www.netlify.com/docs/custom-domains/#domain-aliases
https://www.netlify.com/docs/redirects/#handling-hostnames-and-protocols-differently
https://www.netlify.com/docs/redirects/#structured-configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   publish = "_book"
   command = "yarn docs:build"
+
+[[redirects]]
+  from = "https://neutrino.js.org/*"
+  to = "https://neutrinojs.org/:splat"
+  status = 302
+  force = true
